# ArchiveSync

./: .gitmodules  Makefile  README.md  buf.yaml
client/: CMakeLists.txt  clipboad.cpp  clipboad.h  config.cpp  config.h  encode.cpp  encode.h  loginwindow.cpp  loginwindow.h  logmanager.cpp  logmanager.h  main.cpp  maintab.cpp  maintab.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  packet.cpp  packet.h  textitem.cpp  textitem.h  wxlogin.h
client/pb/: logic.pb.cc  logic.pb.h  struct.pb.cc  struct.pb.h
proto/: buf.gen.yaml  struct.proto
server/: go.mod  go.sum
server/gatesrv/: main.go
server/gatesrv/internal/client/: handle.go
server/pb/: logic.pb.go  struct.pb.go
server/pkg/errors/: errors.go  errors.pb.go
server/pkg/global/: conn.go  server.go
server/pkg/prom/: error.go  monitor.go  prom.go
server/pkg/queue/: iqueue.go
server/pkg/queue/internal/antsqueue/: queue.go  user.go
server/pkg/queue/internal/dynqueue/: dyn_queue.go  user.go
server/pkg/queue/qtyp/: opt.go
server/pkg/types/: conn.go
server/pkg/util/: safe_goroutine.go  zerocopy.go
server/pkg/wssrv/: callback.go  client.go  proc.go  types.go  ws.go
server/pkg/wssrv/internal/wsv2/: proc.go  run.go  wr.go
server/pkg/xlog/: global.go  log.go  plugin.go  proc.go  tags.go  types.go  value.go  whitelist.go
server/pkg/xlog/internal/f9log/: bench_test.go  log.go  logger.go  tagmap.go  text_formatter.go  writer.go  xlog.go
server/pkg/xlog/internal/logutil/: skip.go
server/pkg/xlog/internal/stdlog/: std.go
server/pkg/xlog/internal/zzap/: zap.go
server/pkg/xlog/logtyp/: log.go  types.go  values.go
